--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d"
+    "build": "webpack -d",
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,8 @@
     "express": "^4.14.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "webpack": "^1.13.2"
   }
 }
