--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "compression": "^1.6.2",
     "express": "^4.14.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "webpack": "^1.13.2"
