--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -d",
+    "buildProduction": "webpack -p",
     "start": "node ./server/server.js"
   },
   "repository": {
@@ -25,10 +26,6 @@
     "babel-preset-react": "^6.11.1",
     "compression": "^1.6.2",
     "express": "^4.14.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "redux": "^3.6.0",
     "webpack": "^1.13.2"
   }
 }
